Remove '.' from Player names to make it consistent across sources

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,16 @@ h1 {
   background-color: Red;
 }
 
+.hidden {
+  display: none;
+}
+
 #tierLists {
+  display: flex;
+  flex-direction: column;
+}
+
+.tableGroup {
   display: flex;
 }
 
